# ESP32-FreeRTOS-CPU-Monitor

./: .gitignore  README.md
ESP_CPU_Monitor/: sdkconfig
ESP_CPU_Monitor/main/: CMakeLists.txt  CPU_usage.c  CPU_usage.h  main.c
Examples/ESP32/: CMakeCache.txt  CMakeLists.txt  sdkconfig
Examples/ESP32/main/: CMakeLists.txt  main.c
Examples/STM32/: 001_Tasks Debug.launch  LICENSE  STM32_CPU_Usage Debug.launch  STM32_CPU_Usage.ioc
Examples/STM32/Core/Inc/: CPU_usage.h  FreeRTOSConfig.h  stm32f4xx_it.h
Examples/STM32/Core/Src/: CPU_usage.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Examples/STM32/Debug/: 001_Tasks.elf  001_Tasks.list  001_Tasks.map  STM32_CPU_Usage.elf  STM32_CPU_Usage.list  STM32_CPU_Usage.map  makefile  objects.list
Examples/STM32/Debug/Core/Src/: CPU_usage.cyclo  CPU_usage.d  CPU_usage.su  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  subdir.mk
GUI/: main.py  serial_thread.py
MCUSilk/: AWS_WIFI.c  AWS_WIFI.h  CPU_usage.c  CPU_usage.h  isr_trace.c  isr_trace.h
